@@ -55,27 +55,6 @@
 <ulink url="&downloadable-file;linux.bin">.../current/linux.bin</ulink>
 </para></listitem>
 
-<!-- m68k kernels 2.2.19-2000-12-03 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/linux.bin">.../current/amiga/linux.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/linux.bin">.../current/atari/linux.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/linuxbvme6000.bin">.../current/bvme6000/linuxbvme6000.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/linux.bin">.../current/mac/linux.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/linuxmvme147.bin">.../current/mvme147/linuxmvme147.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/linuxmvme16x.bin">.../current/mvme16x/linuxmvme16x.bin</ulink>
-</para></listitem>
-
 <!-- mips kernels 2.4.9-2001-10-12 --> 
 
 <listitem arch="mips"><para>
