@@ -87,27 +87,6 @@
 <ulink url="&downloadable-file;idepci/tftpboot.img">.../current/idepci/tftpboot.img</ulink>
 </para></listitem>
 
-<!-- m68k tftp images checked 2002-03-15 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/tftplilo.bvme">.../current/bvme6000/tftplilo.bvme</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/tftplilo.conf">.../current/bvme6000/tftplilo.conf</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/tftplilo.txt">.../current/bvme6000/tftplilo.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/tftplilo.mvme">.../current/mvme16x/tftplilo.mvme</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/tftplilo.conf">.../current/mvme16x/tftplilo.conf</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/tftplilo.txt">.../current/mvme16x/tftplilo.txt</ulink>
-</para></listitem>
-
 <!-- mips tftp images checked 2002-03-15 -->
 
 <listitem arch="mips"><para>
