@@ -265,6 +265,15 @@ this misbehaviour.
 </para></listitem>
 </varlistentry>
 
+<varlistentry>
+<term>ramdisk_size</term>
+<listitem><para>
+
+If you are using a 2.2.x kernel, you may need to set &ramdisksize;.
+
+</para></listitem>
+</varlistentry>
+
 </variablelist>
   </sect2>
  </sect1>
