@@ -22,11 +22,6 @@ In some cases, you'll have to do your first boot from floppy disks.
 Generally, all you will need is a
 high-density (1440 kilobytes) 3.5 inch floppy drive.
 
-</para><para arch="m68k">
-
-Double-density installation floppy images (720 k) are also
-provided for Ataris. 
-
 </para><para arch="powerpc">
 
 For CHRP, floppy support is currently broken.
