@@ -17,9 +17,7 @@ written to the floppy at the TOS program command line dialog box.
   <sect2 arch="m68k"><title>Writing Disk Images on Macintosh Systems</title>
 <para>
 
-There is no MacOS application to write the
-<filename>mac/images-1.44/rescue.bin</filename> and
-<filename>mac/images-1.44/driver.bin</filename> images to floppy disks
+There is no MacOS application to write images to floppy disks
 (and there would be no point in doing this as you can't use these
 floppies to boot the installation system or install kernel and modules
 from on Macintosh).  However, these files are needed for the
