@@ -24,6 +24,7 @@ debian-installer (20040721) UNRELEASED; urgency=low
   * Stephen R. Marenka
     - Kill second set of m68k initrds, genext2fs seems to work.
     - Add /dev/null to userdevfs-dev.txt.
+    - Update m68k manual.
   * Colin Watson
     - Document 'install video=ofonly' instead of 'install-safe', which is
       going away (it caused combinatorial explosion in the yaboot prompt on
